# scrape_vergabe

./: .gitignore  README.md  app.py  database.py  evergabe_scrape.py  pyproject.toml  requirements.txt  sample_search_terms.md  searchterms.md  task.md  websites_to_scrape.md
